--- a/Notebooks/Notebook_Martin.ipynb
+++ b/Notebooks/Notebook_Martin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 123,
    "id": "8deeb3bb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "id": "23272e85",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 125,
    "id": "3f27167a",
    "metadata": {},
    "outputs": [],
@@ -36,20 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "fdca96f9",
+   "execution_count": 126,
+   "id": "dd777e25",
    "metadata": {},
    "outputs": [],
    "source": [
     "carbon = pd.read_csv(DATA_DIR / \"CH 2020-2021.csv\")\n",
     "mvs_1 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_1_neu.csv\", delimiter=';', low_memory=False)\n",
-    "mvs_2 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_2_neu.csv\", delimiter=';', low_memory=False)"
+    "mvs_2 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_2_neu.csv\", delimiter=';', low_memory=False, skiprows=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "2232cc6a",
+   "execution_count": 127,
+   "id": "f007be42",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,8 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "68898f63",
+   "execution_count": 128,
+   "id": "355ebadd",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "4  01.01.2021 00:15  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "c42c9af2",
+   "execution_count": 129,
+   "id": "46d0e9cf",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
        "16235"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "2c6a00d5",
+   "execution_count": 130,
+   "id": "794d0d75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,8 +477,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "6f6d238a",
+   "execution_count": 131,
+   "id": "6d944215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,8 +487,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "04051d6f",
+   "execution_count": 132,
+   "id": "5ebac237",
    "metadata": {},
    "outputs": [
     {
@@ -532,8 +532,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "653c068c",
+   "execution_count": 133,
+   "id": "5ae21454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,8 +546,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "d116acf1",
+   "execution_count": 134,
+   "id": "564da62f",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1175101</th>\n",
+       "      <th>1175100</th>\n",
        "      <td>978722</td>\n",
        "      <td>25.0</td>\n",
        "      <td>1</td>\n",
@@ -592,7 +592,7 @@
        "      <td>01.01.2021 00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1175102</th>\n",
+       "      <th>1175101</th>\n",
        "      <td>978724</td>\n",
        "      <td>26.0</td>\n",
        "      <td>1</td>\n",
@@ -602,7 +602,7 @@
        "      <td>01.01.2021 00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1175103</th>\n",
+       "      <th>1175102</th>\n",
        "      <td>978728</td>\n",
        "      <td>28.0</td>\n",
        "      <td>1</td>\n",
@@ -612,7 +612,7 @@
        "      <td>01.01.2021 00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1175104</th>\n",
+       "      <th>1175103</th>\n",
        "      <td>982914</td>\n",
        "      <td>29.0</td>\n",
        "      <td>1</td>\n",
@@ -622,7 +622,7 @@
        "      <td>01.01.2021 00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1175105</th>\n",
+       "      <th>1175104</th>\n",
        "      <td>1057266</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1</td>\n",
@@ -637,21 +637,21 @@
       ],
       "text/plain": [
        "              id  Chargepoint connector charge_log_id metervalue increment  \\\n",
-       "1175101   978722         25.0         1          2201     478370         0   \n",
-       "1175102   978724         26.0         1          1965     252472         0   \n",
-       "1175103   978728         28.0         1          2199     332544      1173   \n",
-       "1175104   982914         29.0         1          2197     805520         0   \n",
-       "1175105  1057266          1.0         1          2188     154340       920   \n",
+       "1175100   978722         25.0         1          2201     478370         0   \n",
+       "1175101   978724         26.0         1          1965     252472         0   \n",
+       "1175102   978728         28.0         1          2199     332544      1173   \n",
+       "1175103   982914         29.0         1          2197     805520         0   \n",
+       "1175104  1057266          1.0         1          2188     154340       920   \n",
        "\n",
        "                timestamp  \n",
+       "1175100  01.01.2021 00:00  \n",
        "1175101  01.01.2021 00:00  \n",
        "1175102  01.01.2021 00:00  \n",
        "1175103  01.01.2021 00:00  \n",
-       "1175104  01.01.2021 00:00  \n",
-       "1175105  01.01.2021 00:00  "
+       "1175104  01.01.2021 00:00  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "8b3c1a9e",
+   "execution_count": 135,
+   "id": "d1beb1f8",
    "metadata": {},
    "outputs": [
     {
@@ -758,44 +758,44 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1050556</th>\n",
-       "      <td>727999</td>\n",
+       "      <th>1048729</th>\n",
+       "      <td>725965</td>\n",
        "      <td>10027.0</td>\n",
        "      <td>4c5d641d-174a-4750-8133-704d0959c25e</td>\n",
-       "      <td>7f3c0c16-fed0-431b-b167-682c473b9622</td>\n",
-       "      <td>39570</td>\n",
+       "      <td>e7f74b1a-95aa-4f52-9ca1-7b96d50282df</td>\n",
+       "      <td>37020</td>\n",
        "      <td>0</td>\n",
-       "      <td>07.11.2020 19:30</td>\n",
+       "      <td>06.11.2020 20:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1052950</th>\n",
-       "      <td>733628</td>\n",
+       "      <th>1048751</th>\n",
+       "      <td>725964</td>\n",
+       "      <td>10027.0</td>\n",
+       "      <td>4c5d641d-174a-4750-8133-704d0959c25e</td>\n",
+       "      <td>e7f74b1a-95aa-4f52-9ca1-7b96d50282df</td>\n",
+       "      <td>37030</td>\n",
+       "      <td>10</td>\n",
+       "      <td>06.11.2020 20:15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1051809</th>\n",
+       "      <td>731220</td>\n",
        "      <td>10027.0</td>\n",
        "      <td>4c5d641d-174a-4750-8133-704d0959c25e</td>\n",
        "      <td>03cdff9d-3939-4535-91c2-39f81b598b29</td>\n",
-       "      <td>41530</td>\n",
-       "      <td>0</td>\n",
-       "      <td>08.11.2020 21:00</td>\n",
+       "      <td>41460</td>\n",
+       "      <td>150</td>\n",
+       "      <td>08.11.2020 10:30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1044522</th>\n",
-       "      <td>713466</td>\n",
+       "      <th>1044142</th>\n",
+       "      <td>713315</td>\n",
        "      <td>10027.0</td>\n",
        "      <td>4c5d641d-174a-4750-8133-704d0959c25e</td>\n",
        "      <td>d1f1bc24-9de8-4375-816d-aed474ad76f8</td>\n",
-       "      <td>26380</td>\n",
+       "      <td>26340</td>\n",
        "      <td>0</td>\n",
-       "      <td>04.11.2020 15:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1046534</th>\n",
-       "      <td>721193</td>\n",
-       "      <td>10027.0</td>\n",
-       "      <td>4c5d641d-174a-4750-8133-704d0959c25e</td>\n",
-       "      <td>eee198bf-7b74-4c16-9387-25bb896ddea1</td>\n",
-       "      <td>30810</td>\n",
-       "      <td>10</td>\n",
-       "      <td>05.11.2020 15:00</td>\n",
+       "      <td>04.11.2020 09:15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>696713</th>\n",
@@ -809,7 +809,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1175106 rows × 7 columns</p>\n",
+       "<p>1175105 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -820,10 +820,10 @@
        "198701   1304090          1.0                                     1   \n",
        "198664   1304091          1.0                                     1   \n",
        "...          ...          ...                                   ...   \n",
-       "1050556   727999      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
-       "1052950   733628      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
-       "1044522   713466      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
-       "1046534   721193      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
+       "1048729   725965      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
+       "1048751   725964      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
+       "1051809   731220      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
+       "1044142   713315      10027.0  4c5d641d-174a-4750-8133-704d0959c25e   \n",
        "696713        id          NaN                             connector   \n",
        "\n",
        "                                charge_log_id  metervalue  increment  \\\n",
@@ -833,10 +833,10 @@
        "198701                                   5424     1072980        920   \n",
        "198664                                   5424     1072060        900   \n",
        "...                                       ...         ...        ...   \n",
-       "1050556  7f3c0c16-fed0-431b-b167-682c473b9622       39570          0   \n",
-       "1052950  03cdff9d-3939-4535-91c2-39f81b598b29       41530          0   \n",
-       "1044522  d1f1bc24-9de8-4375-816d-aed474ad76f8       26380          0   \n",
-       "1046534  eee198bf-7b74-4c16-9387-25bb896ddea1       30810         10   \n",
+       "1048729  e7f74b1a-95aa-4f52-9ca1-7b96d50282df       37020          0   \n",
+       "1048751  e7f74b1a-95aa-4f52-9ca1-7b96d50282df       37030         10   \n",
+       "1051809  03cdff9d-3939-4535-91c2-39f81b598b29       41460        150   \n",
+       "1044142  d1f1bc24-9de8-4375-816d-aed474ad76f8       26340          0   \n",
        "696713                          charge_log_id  metervalue  increment   \n",
        "\n",
        "                timestamp  \n",
@@ -846,16 +846,16 @@
        "198701   12.03.2021 22:00  \n",
        "198664   12.03.2021 21:45  \n",
        "...                   ...  \n",
-       "1050556  07.11.2020 19:30  \n",
-       "1052950  08.11.2020 21:00  \n",
-       "1044522  04.11.2020 15:30  \n",
-       "1046534  05.11.2020 15:00  \n",
+       "1048729  06.11.2020 20:00  \n",
+       "1048751  06.11.2020 20:15  \n",
+       "1051809  08.11.2020 10:30  \n",
+       "1044142  04.11.2020 09:15  \n",
        "696713          timestamp  \n",
        "\n",
-       "[1175106 rows x 7 columns]"
+       "[1175105 rows x 7 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "347ee4cc",
+   "id": "7f00dada",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a59d856",
+   "id": "c44faa68",
    "metadata": {},
    "outputs": [],
    "source": []
