replace NaN Chargepoints in Notebook template.ipynb

--- a/Notebooks/Notebook template.ipynb
+++ b/Notebooks/Notebook template.ipynb
@@ -37,15 +37,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8310e83b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load metervalues and concat to one dataframe\n",
+    "mvs_2.columns = mvs_1.columns\n",
+    "mvs = pd.concat([mvs_1, mvs_2], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a26e5789",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# replace NaN Chargpoints with unique number based on UUID of the connector\n",
+    "nans = mvs[mvs['Chargepoint'].isna()]\n",
+    "nan_cp_connectors = nans['connector'].unique()[1:]\n",
+    "newid = 10000\n",
+    "for connector in nan_cp_connectors:\n",
+    "    mvs.loc[mvs[\"connector\"] == connector, [\"Chargepoint\"]] = newid\n",
+    "    newid += 1"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
