--- a/Notebooks/Notebook template.ipynb
+++ b/Notebooks/Notebook template.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "23272e85",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "3f27167a",
    "metadata": {},
    "outputs": [],
@@ -37,9 +37,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8310e83b",
+   "id": "a032903c",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "carbon = pd.read_csv(DATA_DIR / \"CH 2020-2021.csv\")\n",
+    "mvs_1 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_1_neu.csv\", delimiter=';', low_memory=False)\n",
+    "mvs_2 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_2_neu.csv\", delimiter=';', low_memory=False, skiprows=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "57962ef2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'mvs_1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20172/1659756739.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# load metervalues and concat to one dataframe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmvs_2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmvs_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mmvs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmvs_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmvs_2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'mvs_1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# load metervalues and concat to one dataframe\n",
     "mvs_2.columns = mvs_1.columns\n",
