Add filter for increment greater than 5500 to CO2 notebook

--- a/Notebooks/Merge meter with CO2 data.ipynb
+++ b/Notebooks/Merge meter with CO2 data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bbcea15e",
+   "id": "87afe193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8d2c291c",
+   "id": "c509c591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a7f76153",
+   "id": "4c5ce1fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a9fc5fe7",
+   "id": "6434242c",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bc21c1c9",
+   "id": "eecc5402",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "fb4bb4c0",
+   "id": "c0cc0d0e",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "b33114a8",
+   "id": "30520ae0",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "8c631d20",
+   "id": "353e1df9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "88791d26",
+   "id": "0b393d86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7e41941a",
+   "id": "546d91f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c6bb42ed",
+   "id": "6d6aaf13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "61f484eb",
+   "id": "8b714e85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b90be03a",
+   "id": "ba65f512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ef662ecb",
+   "id": "3c94aa2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "e2a9756a",
+   "id": "87750529",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "76f43439",
+   "id": "1e73bb1f",
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c8e86fa4",
+   "id": "b92bf70a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "e9a48576",
+   "id": "c9852522",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "48701424",
+   "id": "5a8ed9d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "bbc15716",
+   "id": "848293d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "d4792a46",
+   "id": "e7f46e69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "303b5a10",
+   "id": "c131d161",
    "metadata": {},
    "source": [
     "Check to see how many values are missing"
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "b1803ed3",
+   "id": "8ffbdfa6",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8d1bbe",
+   "id": "ce5e387e",
+   "metadata": {},
+   "source": [
+    "Clean up the impossible charging values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "04661d83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meter = meter[~meter['charge_log_id'].isin(meter['charge_log_id'][meter['increment'] > 5500].unique())]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b86131c9",
    "metadata": {},
    "source": [
     "Is this due to dates past our last CO2 data, or some other error?"
@@ -737,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "b63d7d51",
+   "id": "3085a6c7",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "360d9cc2",
+   "id": "7e296d41",
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "44efc51b",
+   "id": "234ec3e9",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee1c7318",
+   "id": "40c3f852",
    "metadata": {},
    "source": [
     "OK, this is reasonable. We just don't have the data for later dates."
@@ -818,14 +836,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "073d2838",
+   "id": "baa1df02",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "351d2dd6",
+   "id": "e281914c",
    "metadata": {},
    "source": [
     "Visualize some patterns:"
@@ -834,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f82554ef",
+   "id": "febfa4e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a5a35f04",
+   "id": "c4d0e7af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c5fea0b4",
+   "id": "d73ce0f1",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6a38401e",
+   "id": "139fe8b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ee9f1b16",
+   "id": "06f839d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c7663947",
+   "id": "00a1e6d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "be3c0a1b",
+   "id": "44a627cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d90cdaec",
+   "id": "4a2d5ef5",
    "metadata": {},
    "outputs": [
     {
