Add script for clean data production

--- a/Notebooks/Notebook template.ipynb
+++ b/Notebooks/Notebook template.ipynb
@@ -3,19 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8deeb3bb",
+   "id": "84905c52",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from import_clean_data import load_annotated_meter_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "23272e85",
+   "id": "c7b82b68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,55 +26,256 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f27167a",
+   "id": "9dc5bb10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmutel/miniconda3/envs/bw2dev38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (0,2,3,4,5) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "/Users/cmutel/miniconda3/envs/bw2dev38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3441: DtypeWarning: Columns (2,3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "/Users/cmutel/Code/green_charging_emobility/Notebooks/import_clean_data.py:42: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  meter_2[\"Chargepoint\"][mask] = 42\n"
+     ]
+    }
+   ],
    "source": [
-    "assert (DATA_DIR / \"CH 2020-2021.csv\").exists()\n",
-    "assert (DATA_DIR / \"metervalues_pseudonymized_1_neu.csv\").exists()\n",
-    "assert (DATA_DIR / \"metervalues_pseudonymized_2_neu.csv\").exists()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a032903c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "carbon = pd.read_csv(DATA_DIR / \"CH 2020-2021.csv\")\n",
-    "mvs_1 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_1_neu.csv\", delimiter=';', low_memory=False)\n",
-    "mvs_2 = pd.read_csv(DATA_DIR / \"metervalues_pseudonymized_2_neu.csv\", delimiter=';', low_memory=False, skiprows=1)"
+    "meter = load_annotated_meter_data(DATA_DIR)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "57962ef2",
+   "id": "767fa1b6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mvs_1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_20172/1659756739.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# load metervalues and concat to one dataframe\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmvs_2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmvs_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mmvs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmvs_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmvs_2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'mvs_1' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Chargepoint</th>\n",
+       "      <th>connector</th>\n",
+       "      <th>charge_log_id</th>\n",
+       "      <th>metervalue</th>\n",
+       "      <th>increment</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>co2_intensity</th>\n",
+       "      <th>co2_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1057264</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2188</td>\n",
+       "      <td>155260</td>\n",
+       "      <td>920</td>\n",
+       "      <td>2021-01-01 00:15:00</td>\n",
+       "      <td>163.543346</td>\n",
+       "      <td>150.459878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>978733</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2190</td>\n",
+       "      <td>2213880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:15:00</td>\n",
+       "      <td>163.543346</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>978738</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2195</td>\n",
+       "      <td>3081670</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:15:00</td>\n",
+       "      <td>163.543346</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>978742</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2194</td>\n",
+       "      <td>1463670</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:15:00</td>\n",
+       "      <td>163.543346</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>978746</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1923</td>\n",
+       "      <td>1836900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:15:00</td>\n",
+       "      <td>163.543346</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315492</th>\n",
+       "      <td>978722</td>\n",
+       "      <td>25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2201</td>\n",
+       "      <td>478370</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:00:00</td>\n",
+       "      <td>161.490000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315493</th>\n",
+       "      <td>978724</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>252472</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:00:00</td>\n",
+       "      <td>161.490000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315494</th>\n",
+       "      <td>978728</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2199</td>\n",
+       "      <td>332544</td>\n",
+       "      <td>1173</td>\n",
+       "      <td>2021-01-01 00:00:00</td>\n",
+       "      <td>161.490000</td>\n",
+       "      <td>189.427770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315495</th>\n",
+       "      <td>982914</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2197</td>\n",
+       "      <td>805520</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2021-01-01 00:00:00</td>\n",
+       "      <td>161.490000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315496</th>\n",
+       "      <td>1057266</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2188</td>\n",
+       "      <td>154340</td>\n",
+       "      <td>920</td>\n",
+       "      <td>2021-01-01 00:00:00</td>\n",
+       "      <td>161.490000</td>\n",
+       "      <td>148.570800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1175105 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id  Chargepoint connector charge_log_id  metervalue  increment  \\\n",
+       "0       1057264            1         1          2188      155260        920   \n",
+       "1        978733            2         1          2190     2213880          0   \n",
+       "2        978738            3         1          2195     3081670          0   \n",
+       "3        978742            4         1          2194     1463670          0   \n",
+       "4        978746            5         1          1923     1836900          0   \n",
+       "...         ...          ...       ...           ...         ...        ...   \n",
+       "315492   978722           25         1          2201      478370          0   \n",
+       "315493   978724           26         1          1965      252472          0   \n",
+       "315494   978728           28         1          2199      332544       1173   \n",
+       "315495   982914           29         1          2197      805520          0   \n",
+       "315496  1057266            1         1          2188      154340        920   \n",
+       "\n",
+       "                 timestamp  co2_intensity   co2_total  \n",
+       "0      2021-01-01 00:15:00     163.543346  150.459878  \n",
+       "1      2021-01-01 00:15:00     163.543346    0.000000  \n",
+       "2      2021-01-01 00:15:00     163.543346    0.000000  \n",
+       "3      2021-01-01 00:15:00     163.543346    0.000000  \n",
+       "4      2021-01-01 00:15:00     163.543346    0.000000  \n",
+       "...                    ...            ...         ...  \n",
+       "315492 2021-01-01 00:00:00     161.490000    0.000000  \n",
+       "315493 2021-01-01 00:00:00     161.490000    0.000000  \n",
+       "315494 2021-01-01 00:00:00     161.490000  189.427770  \n",
+       "315495 2021-01-01 00:00:00     161.490000    0.000000  \n",
+       "315496 2021-01-01 00:00:00     161.490000  148.570800  \n",
+       "\n",
+       "[1175105 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# load metervalues and concat to one dataframe\n",
-    "mvs_2.columns = mvs_1.columns\n",
-    "mvs = pd.concat([mvs_1, mvs_2], ignore_index=True)"
+    "meter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "999a774b",
+   "metadata": {},
+   "source": [
+    "TODO!!!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a26e5789",
+   "id": "fe21d220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -103,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
